--- a/LocalVibes/Views/Profile/Project.cshtml
+++ b/LocalVibes/Views/Profile/Project.cshtml
@@ -16,6 +16,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewData["Title"]</title>
+    <link rel="stylesheet" href="~/css/Views/Shared/MemberCardRow.css" />
     <link rel="stylesheet" href="~/css/Views/Shared/MemberCard.css" />
     <link rel="stylesheet" href="~/css/Views/Shared/ReviewCard.css" />
     <link rel="stylesheet" href="~/css/Views/Shared/Avatar.css" />
