--- a/LocalVibes/Views/Shared/_VerticalCard.cshtml
+++ b/LocalVibes/Views/Shared/_VerticalCard.cshtml
@@ -6,5 +6,6 @@
     <div class="card-body" style="padding: 16px; text-align: left; background-color:#FFF;">
         <h5 class="card-title" style="margin: 0; font-size: 18px; color: black;">@Model.Title</h5>
         <p class="card-subtitle" style="margin: 4px 0 0; color: black;">@Model.Subtitle</p>
+        <p class="card-description" style="margin: 4px 0 0; color: black;">@Model.Description</p>
     </div>
 </div>
