--- a/LocalVibes/Views/Shared/_VerticalCard.cshtml
+++ b/LocalVibes/Views/Shared/_VerticalCard.cshtml
@@ -1,10 +1,10 @@
 @model LocalVibes.Models.CardModel
 
-<div class="card">
+<div class="VerticalCard" style="width: 200px;">
     <div class="card-image" style="background-image: url('@Model.ImageUrl'); background-size: cover; background-position: center; height: 200px; display: flex; justify-content: center; align-items: center;">
     </div>
-    <div class="card-body" style="padding: 16px; text-align: left; background-color:#FFF;">
-        <h5 class="card-title" style="margin: 0; font-size: 18px; color: black;">@Model.Title</h5>
-        <p class="card-subtitle" style="margin: 4px 0 0; color: black;">@Model.Subtitle</p>
+    <div class="VerticalCard__body" >
+        <h5 class="card-title" >@Model.Title</h5>
+        <p class="card-subtitle" >@Model.Subtitle</p>
     </div>
 </div>
