--- a/LocalVibes/wwwroot/css/Views/Shared/MemberCard.css
+++ b/LocalVibes/wwwroot/css/Views/Shared/MemberCard.css
@@ -1,19 +1,32 @@
 .MemberCard {
   background-color: #FFF;
   display: flex;
-  border-radius: 2em 2em 2em 2em;
-  flex-direction: column;
+  align-items: center;
+  border-radius: 2em;
   color: #333333;
-  padding: 2em 0 2em 0;
+  padding: 2em;
   gap: 1em;
+  max-width: 100%;
+  text-align: center;
 }
-.MemberCard__header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+.MemberCard thead {
+  text-align: center;
+  width: 100%;
 }
+
+.MemberCard tbody {
+  text-align: center;
+  width: 100%;
+}
+
+
 .MemberCard__rows {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  text-align: center;
+  gap: 1em;
+}
+
+.MemberCard__rows__member {
+  text-align: center;
 }
