--- a/LocalVibes/Views/Profile/Event.cshtml
+++ b/LocalVibes/Views/Profile/Event.cshtml
@@ -8,6 +8,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>@ViewData["Title"]</title>
+	@Html.Partial("_Font")
 	<link rel="stylesheet" href="~/css/Views/Profile/Event.css" />
 	<link rel="stylesheet" href="~/css/Views/Shared/SocialMediaCard.css"/>
 	<link rel="stylesheet" href="~/css/Views/Shared/Avatar.css"/>
