--- a/LocalVibes/Views/Authentication/SignUp/_UserForm.cshtml
+++ b/LocalVibes/Views/Authentication/SignUp/_UserForm.cshtml
@@ -1,7 +1,7 @@
 ﻿@using static LocalVibes.Models.ViewModels.SignUpViewModel
 @model UserRegistrationData
 
-<form asp-action="SignUpShift" method="post" asp-antiforgery="true" enctype="multipart/form-data">
+<form asp-action="SignUpUserShift" method="post" asp-antiforgery="true" enctype="multipart/form-data">
     <div class="input-box animation" style="--i:1; --j:23">
         <input asp-for="Username" type="text" />
         <label asp-for="Username"></label>
