Tabla member de Banda acabada

--- a/LocalVibes/Views/Profile/Project.cshtml
+++ b/LocalVibes/Views/Profile/Project.cshtml
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="~/css/Views/Shared/Avatar.css" />
     <link rel="stylesheet" href="~/css/Views/Profile/Project.css" />
     <link rel="stylesheet" href="~/css/Views/Shared/SocialMediaCard.css" />
-    <link rel="stylesheet" href="~/css/Views/"
 </head>
 <body>
     <div class="Profile__page-grid">
@@ -93,7 +92,7 @@
         </div>
 
         <!-- Miembros -->
-        <div class="Profile__right-section">
+        <div class="Profile__right-section p-8" >
             <h2>MIEMBROS</h2>
             @if (Model.Project.MembersOfProjects != null && Model.Project.MembersOfProjects.Any())
             {
