Cambios en ProfileProject con los eventos

--- a/LocalVibes/Views/Profile/Project.cshtml
+++ b/LocalVibes/Views/Profile/Project.cshtml
@@ -116,7 +116,7 @@
                         Title = evento.EventTitle,
                         Subtitle = $"Fecha: {evento.EventDate.ToShortDateString()}",
                         Description = evento.EventDescription,
-                        ImageUrl = evento.EventImage != null ? $"data:image/jpeg;base64,{Convert.ToBase64String(evento.EventImage)}" : null // Muestra la imagen si está disponible
+                        Image = evento.EventImage != null ? evento.EventImage : null // Muestra la imagen si está disponible
                     })
                 }
             }
