--- a/LocalVibes/Views/Shared/_VerticalCard.cshtml
+++ b/LocalVibes/Views/Shared/_VerticalCard.cshtml
@@ -1,8 +1,17 @@
 @model LocalVibes.Models.CardModel
 
-<div class="VerticalCard@(Model.Shadow ? "-shadow" : "")" style="width: 200px;">
-    <div class="card-image" style="background-image: url('@Model.ImageUrl'); background-size: cover; background-position: center; height: 200px; display: flex; justify-content: center; align-items: center;">
-    </div>
+<head>
+    <link rel="stylesheet" href="~/css/Views/Shared/VerticalCard.css" />
+</head>
+<div class="VerticalCard@(Model.Shadow ? "-shadow" : "")" style="width: 300px;">
+    @if (Model.Image == null)
+    {
+        <img src="~/Assets/Pantera.jpeg" />
+    }
+    else
+    {
+        <img src="data:image /png;base64 Convert.ToBase64String(Model.Image)" alt="@Model.Image" />
+    }
     <div class="VerticalCard__body" >
         <h5 class="card-title" >@Model.Title</h5>
         <p class="card-subtitle" >@Model.Subtitle</p>
