--- a/LocalVibes/Views/Shared/_Layout.cshtml
+++ b/LocalVibes/Views/Shared/_Layout.cshtml
@@ -77,8 +77,8 @@
 			</nav>
 		</header>
 
-		<div class="container">
-			<main role="main" class="pb-3">
+		<div>
+			<main role="main">
 				@RenderBody()
 			</main>
 		</div>
