--- a/LocalVibes/Views/Authentication/Login.cshtml
+++ b/LocalVibes/Views/Authentication/Login.cshtml
@@ -3,63 +3,52 @@
 
 @{
 	ViewData["Title"] = "Login";
+	Layout = null;
 }
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-	<link rel="stylesheet" href="~/css/Views/Authentication/Login.css" />
-</head>
-<body>
-
-	<!-- Titulo de la pagina -->
-	<div class="login-container">
-		<div class="login-title">
-			<h2>INICIAR SESION COMO USUARIO, ARTISTA </h2>
-		</div>
-
-		<form asp-action="Login" method="post" asp-antiforgery="true">
-
-			<!-- Campo para el Nombre de Usuario -->
-			<div class="form-group">
-				<label asp-for="Username">Nombre de Usuario</label>
-				<input asp-for="Username" class="form-control" />
-				<span asp-validation-for="Username" class="text-danger"></span>
-			</div>
-
-			<!-- Campo para la Contraseña -->
-			<div class="form-group">
-				<label asp-for="Password">Contraseña</label>
-				<input asp-for="Password" type="password" class="form-control" />
-				<span asp-validation-for="Password" class="text-danger"></span>
-			</div>
-
-			<!-- Checkbox para verificar si es una Banda -->
-			<div class="form-group">
-				<div class="form-check">
-					<input asp-for="IsABand" type="checkbox" class="form-check-input" id="IsBand" />
-					<label class="form-check-label" for="IsBand">Soy una banda</label>
+	<head>
+		@Html.Partial("_Font")
+		<link rel="stylesheet" href="~/css/Views/Authentication/Login.css" />
+	</head>
+	<body>
+		<div class="Login">
+			<div class="Login__left-section">
+				 <video autoplay muted loop id="Login__background__video">
+					 <source src="~/Assets/IMG_0059.mov" type="video/mp4">
+				</video>
+				<div class="Login__background__shadow">
+				</div>
+				<div class="Login__left-section__logo">
+					<img src="~/Assets/Logo-white.png" asp-append-version="true" alt="Logo" class="Landing__header__logo" width="90px">
 				</div>
 			</div>
+			<div class="Login__right-section">
+				<h1>Login</h1>
+				<form class="Login__form" asp-action="Login" method="post" asp-antiforgery="true">
 
-			<!-- Resumen de validación -->
-			<div asp-validation-summary="All" class="text-danger"></div>
+					<div class="form-group">
+						<app-input 
+							asp-for="Username"
+						></app-input>
+					</div>
+					<div class="form-group">
+						<app-input 
+							asp-for="Password"
+							type="password"
+						></app-input>
+					</div>
 
-			<!-- Botón de Enviar -->
-			<button class="btn btn-primary rounded-pill" onclick="submit">Entrar</button>
+					<div asp-validation-summary="All" class="text-danger"></div>
 
-			<!-- Botones para Redirigir a Registro -->
-			<div class="mt-3 text-center">
-				<p>
-					¿No tienes cuenta? Registrate como:
-					<a asp-controller="Authentication" asp-action="SignUpUser" class="btn btn-secondary ml-2 rounded-pill">Usuario nuevo</a>
-					<a asp-controller="Authentication" asp-action="SignUpProject" class="btn btn-secondary ml-2 rounded-pill">Banda/Artista nuevo</a>
-				</p>
+					<app-button 
+						button-text="Entrar"
+						button-type="secondary"
+					></app-button>
+				</form>
+
 			</div>
-		</form>
-	</div>
-
-</body>
+		</div>
+	</body>
 </html>
